fine prima section

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
 body{
     background-color: var(--color-darkgrey);
     color: var(--color-light);
+    font-family: "Montserrat", serif;
 }
 
 .wrapper{
@@ -51,8 +52,7 @@ main{
     left: 0;
     width: 100%;  
     z-index: 2000;  
-    background-color: var(--color-dark);
-    opacity: 0.8;
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;       
     justify-content: flex-end; 
     align-items: center; 
@@ -60,8 +60,7 @@ main{
 }
 
 .button-sticky{
-    background-color: var(--color-dark);
-    opacity: 0.8;
+    background-color: rgba(0, 0, 0, 0.5);
     border: 1px solid var(--color-light);
     color: var(--color-light);
     padding: 10px 35px;
@@ -75,12 +74,61 @@ main{
 }
 
 .nav-bar ul li{
-    padding: 10px 15px;
+    padding: 15px 15px;
     position: relative;
     cursor: pointer;
     color: var(--color-lightgrey);
 }
 
+h2{
+    padding: 15px 15px;
+    font-size: 1.5em;
+}
+.container{
+    width: 100%;
+}
+
+.column{
+    width: calc(100% / 6);
+}
+img{
+    width: 100%;
+    display: block;
+    cursor: pointer;
+}
+
+p{
+    color: var(--color-lightgrey);
+    font-size: 0.8em;
+}
+
+.car-img{
+    position: relative;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+}
+.hover-icon {
+    position: absolute; 
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0);
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 4rem;
+    opacity: 0; 
+    transition: opacity 0.3s ease; 
+    color:var(--color-light);
+    cursor: pointer;
+}
+
+.car-img:hover .hover-icon {
+    opacity: 1; 
+}
 
 /* sidebar */
 
@@ -88,6 +136,17 @@ main{
     flex: 0 0 230px;
     background-color: var(--color-black);
 }
+/* utility padding */
+
+.p-20{
+    padding: 20px;
+}
+
+.p-15{
+    padding: 15px;
+}
+
+
 
 /* utility flex */
 
