--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ main{
     left: 0;
     width: 100%;  
     z-index: 2000;  
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     display: flex;       
     justify-content: flex-end; 
     align-items: center; 
@@ -68,16 +68,32 @@ main{
     cursor: pointer;   
 }
 
+.button-sticky:hover{
+    transform: scale(1.05); 
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+}
+
 .nav-bar ul{
-    display: flex;
     list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center; 
+}
+
+.nav-bar a{
+    text-decoration: none;
+    color: var(--color-lightgrey);
+    transition: color 0.3s ease, transform 0.3s ease;
 }
 
 .nav-bar ul li{
     padding: 15px 15px;
-    position: relative;
     cursor: pointer;
-    color: var(--color-lightgrey);
+}
+.nav-lbar li:hover a{
+    color: var(--color-light); 
+    transform: scale(1.1); 
 }
 
 h2{
@@ -91,15 +107,27 @@ h2{
 .column{
     width: calc(100% / 6);
 }
+.columns{
+    display: flex;
+    flex-wrap: wrap;
+}
 img{
     width: 100%;
+    object-fit: cover;
     display: block;
     cursor: pointer;
+}
+#img-circle{
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    
 }
 
 p{
     color: var(--color-lightgrey);
     font-size: 0.8em;
+    padding: 0px 15px 10px;
 }
 
 .car-img{
@@ -172,3 +200,36 @@ footer{
     background-color: var(--color-darkgrey);
     flex: 0 0 100px;
 }
+
+/* media query */
+
+@media screen and (max-width: 1200px) {
+    .column {
+        width: calc(100% / 6); 
+    }
+    
+} 
+
+@media screen and (max-width: 768px) {
+    .column {
+        width: calc(100% / 4); 
+    }
+   
+} 
+
+@media screen and (max-width: 576px) {
+    .column {
+        width: calc(100% / 2); 
+    }
+    #sidebar{
+        flex: 0 0 50px;
+    }
+} 
+@media screen and (max-width: 400px) {
+    .column {
+        width: calc(100% / 1); 
+    }
+    #sidebar{
+        flex: 0 0 50px;
+    }
+} 
