--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 .debug{
-    border: 1px solid red;
+    border: 1px solid rgb(7, 7, 7);
 }
 
 body{
@@ -85,7 +85,7 @@ main{
     width: 100%;
     display: flex;
     align-items: center;
-    margin: 10px 0px;
+    margin: 5px 0px;
 }
 
 .main-nav li img{
@@ -93,6 +93,30 @@ main{
     object-fit: cover;
     padding-right: 5px;    
     padding-left: 15px;
+}
+/* plylist nav */
+
+.playlist-nav {
+    flex: 1 1 auto;
+    min-height: 0px;
+}
+
+.playlist-nav ul{
+    flex: 1 1 auto;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.playlist-nav{
+    padding: 10px 15px;    
+}
+
+.playlist-nav ul li{
+    margin-bottom: 10px;
+}
+
+h3{
+    margin-bottom: 10px;
 }
 
 #border-green{
@@ -215,8 +239,8 @@ p{
     flex: 0 0 230px;
     flex-shrink: 0;
     background-color: var(--color-black);
-    /* min-height: 400px;
-    overflow: hidden; */
+    min-height: 400px;
+    overflow: hidden;
 }
 
 .sidebar-top{
@@ -224,12 +248,8 @@ p{
        
 }
 
-.sidebar-bottom{
-    height: 90px;   
 
-/* background: var(--color-darkgrey); */
 
-}
 
 #logo img{
     width: 70%;
@@ -237,6 +257,68 @@ p{
     display: block;
     margin: 15px 0px;
     padding-left: 15px;
+}
+
+
+.square {
+    width: 40px; 
+    height: 40px; 
+    background-color: var(--color-lightgrey); 
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    border: 1px solid black; 
+    margin-right: 10px;
+    margin-bottom: 10px;
+
+    
+}
+.square i {
+    color: black; 
+    font-size: 1.5em; 
+}
+
+
+
+.circle-arrow {
+    width: 15px; 
+    height: 15px; 
+    border: 2px solid var(--color-light); 
+    border-radius: 50%; 
+    color: var(--color-light);
+    cursor: pointer;
+}
+.circle-arrow i {
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+    margin: 0 auto; 
+    font-size: 0.3em;
+}
+
+.user{
+    color: var(--color-light);
+    cursor: pointer;
+
+}
+.sidebar-bottom{
+    height: 90px;   
+    background: var(--color-black);
+    position: relative;
+    padding: 15px;
+}
+
+.sidebar-bottom span{
+    text-decoration: none;
+    color: var(--color-light);
+    padding-left: 10px;
+    cursor: pointer;   
+}
+
+
+hr{
+    color: var(--color-lightgrey);
+    margin: 10px 0px;
 }
 
 /* utility padding */
@@ -273,6 +355,9 @@ p{
 
 .f-wrap{
     flex-wrap: wrap;
+}
+.f-start{
+    align-items: start;
 }
 h4{
     margin: 0;
