--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 .debug{
-    border: 1px solid red;
+    border: 1px solid rgb(0, 0, 0);
 }
 
 body{
@@ -86,6 +86,11 @@ main{
     display: flex;
     align-items: center;
     margin: 5px 0px;
+    transition: all 0.3s ease;
+}
+
+.main-nav li:hover{
+    color: var(--color-light);
 }
 
 .main-nav li img{
@@ -94,6 +99,17 @@ main{
     padding-right: 5px;    
     padding-left: 15px;
 }
+
+.border-edge:hover{
+  background-color: var(--color-black);
+  color: var(--color-light);
+  border-left: 3px solid var(--color-highlight);
+  padding-left: 5px;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+
 /* plylist nav */
 
 .playlist-nav {
@@ -118,6 +134,7 @@ main{
 }
 
 .playlist-nav ul li{
+    margin-top: 10px;
     margin-bottom: 10px;
 }
 
@@ -125,7 +142,9 @@ h3{
     margin-bottom: 10px;
 }
 
-
+.list-playlist li{
+    margin-left: 5px;
+}
 
 #border-green{
     border-left: 3px solid var(--color-highlight);
@@ -137,6 +156,7 @@ h3{
     color: var(--color-lightgrey);
 
 }
+
 
 .nav-bar ul{
     list-style: none;
@@ -254,11 +274,11 @@ p{
 
 .sidebar-top{
     height: calc(100% - 90px);
-       
 }
 
-
-
+#logo-small{
+    display: none;
+}
 
 #logo img{
     width: 70%;
@@ -267,6 +287,16 @@ p{
     margin: 15px 0px;
     padding-left: 15px;
 }
+
+#logo-big{
+    width: 70%;
+    object-fit: cover;
+    display: block;
+    margin: 15px 0px;
+    padding-left: 15px;
+}
+
+
 
 
 .square {
@@ -278,34 +308,42 @@ p{
     align-items: center; 
     border: 1px solid black; 
     margin-right: 10px;
-    margin-bottom: 10px;
-
-    
+    border-radius: 11px; 
+    cursor: pointer;   
 }
 .square i {
     color: black; 
     font-size: 1.5em; 
 }
 
-
+/* .square:hover i {
+    transform: scale(1.5);
+    transition: trasform 0.3 ease;
+} */
+.square:hover{
+    transform: scale(1.2);
+    transition: trasform 0.3 ease;
+}
 
 .circle-arrow {
-    width: 15px; 
-    height: 15px; 
+    width: 20px; 
+    height: 20px; 
     border: 2px solid var(--color-lightgrey); 
     border-radius: 50%; 
     cursor: pointer;
+
 }
 .circle-arrow i {
     display: flex; 
     justify-content: center; 
     align-items: center;
     margin: 0 auto; 
-    font-size: 0.3em;
+    font-size: 0.5em;
     color: var(--color-lightgrey);
 }
 
 .user{
+    font-size: 1.4em;
     color: var(--color-light);
     cursor: pointer;
 
@@ -390,6 +428,10 @@ hr{
     align-items: start;
 }
 
+.t-align{
+    text-align: center;
+}
+
 
 h4{
     margin: 0;
@@ -447,6 +489,20 @@ footer{
     margin: 0px 10px;
 }
 
+.icon-sisters i:hover {
+    transform: scale(1.5); 
+    cursor: pointer;
+}
+.icon-sisters .fa-heart {
+    transition: color 0.3s ease; 
+}
+ 
+.icon-sisters .fa-heart:hover {
+    color: red; 
+}
+
+
+
 /* container-center */
 
 .container-center {
@@ -457,18 +513,33 @@ footer{
     background-color: var(--color-darkgrey); 
 }
 
-.icon-center {
+
+
+.icon-center{
     width: 100%;
     list-style-type: none;
     text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon-center li {
+    padding: 0px 5px; 
 }
 
 .icon-center i{
     width: 100%;
     padding: 0px 10px;
-    font-size: 1.6em;
+    font-size: 1em;
     cursor: pointer;
     margin-top: 10px;
+    transition: transform 0.3s ease;
+}
+
+.icon-center i:hover{
+    transform: scale(1.5);
+    cursor: pointer;
 }
 
 .music-center{
@@ -484,6 +555,7 @@ footer{
 .controller-bar{
     width: 100%;
 }
+  
 
 
 /* container-right */
@@ -497,10 +569,14 @@ footer{
     list-style-type: none;
     text-decoration: none;
     display: flex;
+    cursor: pointer;
 }
 
 .icon-right li{
     padding: 10px;
+}
+.icon-right li:hover {
+    transform: scale(1.2);
 }
 
 .music-right{
@@ -532,7 +608,7 @@ footer{
         justify-content: center;
     }
     
-   
+
 } 
 
 @media screen and (max-width: 768px) {
@@ -540,14 +616,23 @@ footer{
         width: calc(100% / 2); 
     }
     #sidebar{
-        flex: 0 0 50px;
+        flex: 0 0 70px;
     }
-    /* .d-none{
+    #logo-small{
+        display: block;
+        width: 35px;
+        height: 35px;
+        margin: 15px 15px;
+    }
+    #logo-big{
         display: none;
-        align-items: center;
-    } */
-   
-   
+    }
+    .no-span{
+        display: none;
+    }
+    hr{
+        visibility: hidden;
+    }
 } 
 
 @media screen and (max-width: 576px) {
